my code in calci

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="_5">5</string>
     <string name="_4">4</string>
     <string name="_6">6</string>
+    <string name="_0">0</string>
+    <string name="ac">AC</string>
 </resources>
